add start popup, improove ad

--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,12 @@
   <button class="controls_game-btn popup__body--btn__share">Поделиться</button>
  </div>
 </div>
+
+<div class="popup popup__start">
+    <div class="popup__body">
+        <button class="controls_game-btn popup__body--btn__start">Старт</button>
+    </div>
+</div>
 <main class="wrapper">
  <!-- intro -->
  <div class="intro clearfix">
