--- a/src/index.html
+++ b/src/index.html
@@ -1,22 +1,47 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>2048</title>
-  <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
-  <link href="https://fonts.googleapis.com/css?family=Rubik:300,400,700" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-  <link rel="stylesheet" href="./style.css">
-  <script type="text/javascript" src="https://tgames.store/scripts/include.js"></script>
+    <meta charset="UTF-8">
+    <title>2048</title>
+    <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Rubik:300,400,700" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+    <link rel="stylesheet" href="./style.css">
+    <!--   заменить на локальный  https://tgames.store/scripts/include.js-->
+    <script type="text/javascript" src="https://tgames.store/scripts/include.js"></script>
 </head>
 <body>
 <!-- main  -->
-<div class="popup">
- <div class="popup__body">
-  <button class="controls_game-btn popup__body--btn__new">Новая игра</button>
-  <button class="controls_game-btn popup__body--btn__share">Поделиться</button>
- </div>
+<div class="popup popup__restart">
+    <div class="popup__body">
+        <div class="info">
+            <div class="info__tile">
+                Максимальный <br> блок:
+                <div class="info__tile--block">
+                </div>
+            </div>
+            <div class="info__score">
+                Очки: <br>
+                <div class="info__score--value"></div>
+            </div>
+        </div>
+        <button class="controls_game-btn popup__body--btn__new">Новая игра</button>
+        <button class="controls_game-btn popup__body--btn__share">Поделиться</button>
+    </div>
 </div>
+
+
+<div class="popup popup__continue">
+    <div class="popup__body">
+        <button class="controls_game-btn popup__body--btn__continue">
+           <span>Продолжить</span><img src="./images/ad.svg" alt="ad">
+        </button>
+        <button class="controls_game-btn popup__body--btn__skip">
+            <div class="line"></div><span>Пропустить</span>
+        </button>
+    </div>
+</div>
+
 
 <div class="popup popup__start">
     <div class="popup__body">
@@ -24,44 +49,47 @@
     </div>
 </div>
 <main class="wrapper">
- <!-- intro -->
- <div class="intro clearfix">
-  <h1 class="intro_title"> 2048 </h1>
- </div>
- <!-- /end intro -->
- <!-- controls -->
- <div class="controls clearfix">
-  <div class="controls_game">
-   <button data-js="newGame" class="controls_game-btn popup__body--btn__restart"> Новая игра </button>
-  </div>
-  <div class="controls_score">
-   <span class="controls_score-label">Score </span>
-   <br>
-   <span class="controls_score-text" data-js="score"> </span>
-  </div>
- </div>
- <!-- gameboard -->
- <div id="touchGameboard" class="gameboard">
-  <div class="grid">
-  </div>
-  <div class="tile-container">
-  </div>
- </div>
+    <!-- intro -->
+    <div class="intro clearfix">
+        <h1 class="intro_title"> 2048 </h1>
+    </div>
+    <!-- /end intro -->
+    <!-- controls -->
+    <div class="controls clearfix">
+        <div class="controls_game">
+            <button data-js="newGame" class="controls_game-btn popup__body--btn__restart"> Новая игра</button>
+        </div>
+        <div class="controls_score">
+            <span class="controls_score-label">Score </span>
+            <br>
+            <span class="controls_score-text" data-js="score"> </span>
+        </div>
+    </div>
+    <!-- gameboard -->
+    <div id="touchGameboard" class="gameboard">
+        <div class="grid">
+        </div>
+        <div class="tile-container">
+        </div>
+    </div>
 </main>
 
 <script type="text/html" id="template_grid_cell">
- <div class="grid_cell"></div>
+    <div class="grid_cell"></div>
 </script>
 
 <script type="text/html" id="template_tile">
- <div class="tile">
-  <span class="tile_number"> </span>
- </div>
+    <div class="tile">
+        <span class="tile_number"> </span>
+    </div>
 </script>
 
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js'></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.5/lodash.js'></script>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.js'></script><script  src="./script.js"></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.js'></script>
+
+<script src="./script.js"></script>
+
 
 </body>
 </html>
